# ColStudies

./: .gitignore  .zenodo.json  LICENSE  README.md  StartColStudies.cmd  pyproject.toml  requirements.in  requirements.txt
.github/: dependabot.yml
web/: annotations.py  cdc.py  cdcstudies.py  colecticaapi.py  colstudies.py  daralogin.py  dataciteinfo.py  datacitelogin.py  dbkeditapi.py  dbklogin.py  doiinfo.py  fileinfo.py  globalvars.py  justpy.env  login.py  menu.py  search.py  series.py  settings.py  starapi.py  starinfo.py  studies.py  study.py
web/util/: dara.py  datacite.py  ddixml.py  edxml.py
